docs/content/user-guides/crd-acme/03-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 80
      nodePort: 30000
    - protocol: TCP
      name: websecure
      port: 443
      nodePort: 30001
  selector:
    app: traefik
